--- a/save_money_app/app/src/main/res/layout/activity_list_items.xml
+++ b/save_money_app/app/src/main/res/layout/activity_list_items.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".ListItemsActivity">
 
     <TextView
         android:id="@+id/logo"
@@ -18,8 +18,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.095" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/list_name"
@@ -27,7 +26,7 @@
         android:layout_height="wrap_content"
 
         android:layout_marginTop="12dp"
-        android:text="Minhas listas"
+        android:text="Casa"
 
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         android:textColor="?colorSecondary"
@@ -37,40 +36,67 @@
 
     <ListView
         android:id="@+id/items_list"
+        style="@style/Widget.AppCompat.Light.ListView.DropDown"
         android:layout_width="0dp"
         android:layout_height="0dp"
 
-        android:background="@drawable/list_bord"
-        android:textColor="?colorSecondary"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="32dp"
-        android:entries="@array/lists"
+        android:background="@drawable/list_bord"
+        android:entries="@array/items"
+        android:textColor="?colorSecondary"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+
         android:paddingVertical="5dp"
-        app:layout_constraintBottom_toTopOf="@+id/add_list"
+        android:paddingHorizontal="5dp"
+        app:layout_constraintBottom_toTopOf="@+id/add_item"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/list_name" />
 
     <Button
-        android:id="@+id/add_list"
+        android:id="@+id/add_item"
         android:layout_width="132dp"
         android:layout_height="56dp"
+
+        android:layout_marginStart="32dp"
         android:layout_marginBottom="32dp"
         android:backgroundTint="?colorPrimary"
-
         android:gravity="center"
-        android:text="Nova lista"
-        android:textAlignment="center"
 
+        android:text="Novo item"
+        android:textAlignment="center"
         android:textColor="?colorTertiary"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         app:cornerRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/search"
+        app:layout_constraintHorizontal_bias="0.288"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/items_list" />
+
+    <Button
+        android:id="@+id/search"
+        android:layout_width="132dp"
+        android:layout_height="56dp"
+
+        android:layout_marginStart="79dp"
+
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="32dp"
+        android:backgroundTint="?colorPrimary"
+        android:gravity="center"
+        android:textColor="?colorTertiary"
+        android:text="Buscar"
+        android:textAlignment="center"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        app:cornerRadius="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/add_item"
+        app:layout_constraintTop_toBottomOf="@+id/items_list"
+        app:layout_constraintVertical_bias="1.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
