--- a/save_money_app/app/src/main/res/layout/activity_list_stores.xml
+++ b/save_money_app/app/src/main/res/layout/activity_list_stores.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".ListStoresActivity">
 
     <TextView
         android:id="@+id/logo"
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
 
         android:layout_marginTop="12dp"
-        android:text="Minhas listas"
+        android:text="Lista de Casa"
 
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         android:textColor="?colorSecondary"
@@ -37,40 +37,23 @@
 
     <ListView
         android:id="@+id/items_list"
+        style="@style/Widget.AppCompat.Light.ListView.DropDown"
         android:layout_width="0dp"
         android:layout_height="0dp"
 
-        android:background="@drawable/list_bord"
-        android:textColor="?colorSecondary"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
-        android:layout_marginBottom="32dp"
-        android:entries="@array/lists"
+        android:background="@drawable/list_bord"
+        android:entries="@array/stores"
+        android:paddingHorizontal="5dp"
         android:paddingVertical="5dp"
-        app:layout_constraintBottom_toTopOf="@+id/add_list"
+
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textColor="?colorSecondary"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/list_name" />
-
-    <Button
-        android:id="@+id/add_list"
-        android:layout_width="132dp"
-        android:layout_height="56dp"
-        android:layout_marginBottom="32dp"
-        android:backgroundTint="?colorPrimary"
-
-        android:gravity="center"
-        android:text="Nova lista"
-        android:textAlignment="center"
-
-        android:textColor="?colorTertiary"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        app:cornerRadius="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
