--- a/save_money_app/app/src/main/res/layout/activity_search_item.xml
+++ b/save_money_app/app/src/main/res/layout/activity_search_item.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".SearchItemActivity">
 
     <TextView
         android:id="@+id/logo"
@@ -22,55 +22,68 @@
         app:layout_constraintVertical_bias="0.095" />
 
     <TextView
-        android:id="@+id/list_name"
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
+
         android:layout_height="wrap_content"
-
         android:layout_marginTop="12dp"
-        android:text="Minhas listas"
-
+        android:text="Buscar item"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         android:textColor="?colorSecondary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/logo" />
 
-    <ListView
-        android:id="@+id/items_list"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+    <EditText
+        android:id="@+id/searchText"
+        android:layout_width="276dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="28dp"
 
         android:background="@drawable/list_bord"
-        android:textColor="?colorSecondary"
+
+        android:hint="Digite o item"
+        android:paddingHorizontal="5sp"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="32dp"
-        android:entries="@array/lists"
-        android:paddingVertical="5dp"
-        app:layout_constraintBottom_toTopOf="@+id/add_list"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:textColor="?colorSecondary"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/list_name" />
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <Button
-        android:id="@+id/add_list"
-        android:layout_width="132dp"
-        android:layout_height="56dp"
-        android:layout_marginBottom="32dp"
-        android:backgroundTint="?colorPrimary"
+        android:layout_width="62dp"
+        android:layout_height="48dp"
 
-        android:gravity="center"
-        android:text="Nova lista"
-        android:textAlignment="center"
 
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="28dp"
+        android:layout_marginEnd="32dp"
+        android:text="Ir"
         android:textColor="?colorTertiary"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        app:cornerRadius="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:cornerRadius="10sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/searchText"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+    <ListView
+        android:id="@+id/items_list"
+        style="@style/Widget.AppCompat.Light.ListView.DropDown"
+        android:layout_width="345dp"
+        android:layout_height="448dp"
+
+        android:layout_marginStart="32dp"
+
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="32dp"
+        android:background="@drawable/list_bord"
+        android:paddingHorizontal="5dp"
+        android:paddingVertical="5dp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textColor="?colorSecondary"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/searchText" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
