--- a/save_money_app/app/src/main/res/values-night/themes.xml
+++ b/save_money_app/app/src/main/res/values-night/themes.xml
@@ -2,6 +2,8 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.Save_money_app" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+        <item name="colorPrimary">#129633</item>
+        <item name="colorSecondary">#FFFFFF</item>
+        <item name="colorTertiary">#000000</item>
     </style>
 </resources>
