--- a/save_money_app/app/src/main/res/values/themes.xml
+++ b/save_money_app/app/src/main/res/values/themes.xml
@@ -2,7 +2,9 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.Save_money_app" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">#129633</item>
+        <item name="colorSecondary">#000000</item>
+        <item name="colorTertiary">#FFFFFF</item>
     </style>
 
     <style name="Theme.Save_money_app" parent="Base.Theme.Save_money_app" />
