--- a/save_money_app/app/src/main/res/layout/activity_list_stores.xml
+++ b/save_money_app/app/src/main/res/layout/activity_list_stores.xml
@@ -35,6 +35,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/logo" />
 
+    <Button
+        android:id="@+id/return_button"
+        android:layout_width="28dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="32dp"
+
+        android:background="@drawable/botao_voltar"
+        android:backgroundTintMode="?colorSecondary"
+
+        app:layout_constraintBottom_toBottomOf="@+id/logo"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/logo"
+        />
+
     <ListView
         android:id="@+id/items_list"
         style="@style/Widget.AppCompat.Light.ListView.DropDown"
@@ -44,11 +58,12 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
+        android:layout_marginBottom="32dp"
         android:background="@drawable/list_bord"
         android:entries="@array/stores"
         android:paddingHorizontal="5dp"
-        android:paddingVertical="5dp"
 
+        android:paddingVertical="5dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="?colorSecondary"
         app:layout_constraintBottom_toBottomOf="parent"
