--- a/save_money_app/app/src/main/res/layout/activity_main.xml
+++ b/save_money_app/app/src/main/res/layout/activity_main.xml
@@ -58,19 +58,21 @@
         android:id="@+id/add_list"
         android:layout_width="132dp"
         android:layout_height="56dp"
+        android:layout_marginTop="32dp"
         android:layout_marginBottom="32dp"
-        android:backgroundTint="?colorPrimary"
 
+        android:backgroundTint="?colorPrimary"
         android:gravity="center"
         android:text="Nova lista"
-        android:textAlignment="center"
 
-        android:textColor="?colorTertiary"
+        android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textColor="?colorTertiary"
         app:cornerRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/items_list" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
