--- a/save_money_app/app/src/main/res/layout/activity_search_item.xml
+++ b/save_money_app/app/src/main/res/layout/activity_search_item.xml
@@ -51,6 +51,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <Button
+        android:id="@+id/search_item"
         android:layout_width="62dp"
         android:layout_height="48dp"
 
@@ -84,6 +85,20 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/searchText" />
+
+    <Button
+        android:id="@+id/return_button"
+        android:layout_width="28dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="32dp"
+
+        android:background="@drawable/botao_voltar"
+        android:backgroundTintMode="?colorSecondary"
+
+        app:layout_constraintBottom_toBottomOf="@+id/logo"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/logo"
+        />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
