--- a/save_money_app/app/src/main/res/layout/activity_show_item.xml
+++ b/save_money_app/app/src/main/res/layout/activity_show_item.xml
@@ -5,6 +5,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ShowItemActivity">
+
+    <Button
+        android:id="@+id/return_button"
+        android:layout_width="28dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="32dp"
+
+        android:background="@drawable/botao_voltar"
+        android:backgroundTintMode="?colorSecondary"
+
+        app:layout_constraintBottom_toBottomOf="@+id/logo"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/logo"
+        />
+
     <TextView
         android:id="@+id/logo"
         android:layout_width="wrap_content"
