--- a/save_money_app/app/src/main/res/layout/activity_search_item.xml
+++ b/save_money_app/app/src/main/res/layout/activity_search_item.xml
@@ -35,7 +35,7 @@
         app:layout_constraintTop_toBottomOf="@+id/logo" />
 
     <EditText
-        android:id="@+id/searchText"
+        android:id="@+id/searchContent"
         android:layout_width="276dp"
         android:layout_height="48dp"
         android:layout_marginStart="32dp"
@@ -64,7 +64,7 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         app:cornerRadius="10sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/searchText"
+        app:layout_constraintStart_toEndOf="@+id/searchContent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <ListView
@@ -75,16 +75,17 @@
 
         android:layout_marginStart="32dp"
 
-        android:layout_marginTop="15dp"
         android:layout_marginEnd="32dp"
         android:background="@drawable/list_bord"
         android:paddingHorizontal="5dp"
         android:paddingVertical="5dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="?colorSecondary"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/searchText" />
+        app:layout_constraintTop_toBottomOf="@+id/searchContent" />
 
     <Button
         android:id="@+id/return_button"
