--- a/save_money_app/app/src/main/res/layout/activity_search_item.xml
+++ b/save_money_app/app/src/main/res/layout/activity_search_item.xml
@@ -70,20 +70,19 @@
     <ListView
         android:id="@+id/items_list"
         style="@style/Widget.AppCompat.Light.ListView.DropDown"
-        android:layout_width="345dp"
-        android:layout_height="448dp"
+        android:layout_width="341dp"
+        android:layout_height="406dp"
 
         android:layout_marginStart="32dp"
 
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
         android:background="@drawable/list_bord"
         android:paddingHorizontal="5dp"
         android:paddingVertical="5dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="?colorSecondary"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/searchContent" />
 
